--- a/etc/timidity/timidity.cfg
+++ b/etc/timidity/timidity.cfg
@@ -35,4 +35,4 @@
 #source /etc/timidity/fluidr3_gm.cfg
 #source /etc/timidity/fluidr3_gs.cfg
 
-soundfont /usr/share/soundfonts/merlin.sfArk
+soundfont /usr/share/soundfonts/merlin.sf2
